# stock-strategy-execution-simulator

./: Cargo.toml  README.md  copyright.py
benches/: benchmark.rs
benches/translation/: mod.rs  waterfall.rs
src/: lib.rs
src/sim/: context.rs  error.rs  flow_descriptor.rs  mediator.rs  mod.rs  primitive_buffer.rs  reader.rs  selector.rs  spatial_buffer.rs
src/sim/bb/: cursor.rs  mod.rs  quotes.rs  time_frame.rs
src/sim/builder/: frame_builder.rs  mod.rs  translation_builder.rs
src/sim/collections/: bitmap.rs  circular_buffer.rs  cycle_iter.rs  iter64.rs  mod.rs  thin_circular_buffer.rs
src/sim/compute/: guard.rs  mod.rs  translation_strategy.rs
src/sim/compute/generator/: average_true_range.rs  bollinger_bands.rs  exponential_moving_average.rs  mod.rs  simple_moving_average.rs  standard_deviation.rs  true_range.rs
src/sim/compute/generator/rolling/: mod.rs
src/sim/compute/operators/: math.rs  mod.rs  ordering.rs
src/sim/compute/report/: mod.rs
src/sim/compute/wide/: mod.rs  pipeline_assembly.rs
src/sim/compute/wide/expr/: computable.rs  logical.rs  math.rs  math_tests.rs  mod.rs  predicate.rs  primitive.rs
src/sim/config/: mod.rs
src/sim/definitions/: mod.rs
src/sim/engine/: mod.rs  stop_loss.rs
src/sim/engine/transaction/: currency.rs  mod.rs  order_price.rs  price_aggregate.rs
src/sim/tlb/: direct_base_lifetime_translation_buffer.rs  direct_lifetime_translation_buffer.rs  direct_translation_buffer.rs  identity_translation_buffer.rs  mod.rs  waterfall_base_lifetime_translation_buffer.rs  waterfall_lifetime_translation_buffer.rs
(+9 files in other folders)
