[package]
name = "sim_mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
uuid = "1.1.2"
smallvec = "1.9.0"
num-integer = "0.1"
time = "0.3.15"
#petgraph = "0.6.2"
#tokio = { version = "1.21.0", features = ["rt", "sync"] }
#num_cpus = "1.13.1"
#rayon = "1.5.3"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.5"

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false